[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yuejie-cet"
version = "0.1.0"
description = "AI-powered CET reading trainer with a Textual TUI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "textual>=0.58,<2.0",
  "httpx>=0.27,<1.0",
]

[project.scripts]
yuejie-cet = "app.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]

